[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmp3"
version = "0.1.2"
description = "Simple CLI tool to download YouTube audio as MP3"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp"
]

[project.scripts]
ytmp3 = "ytmp3.cli:main"
